# frontt

./: .secrethawkignore  CONFIGURATION.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  secrets_project.json
.github/workflows/: deploy.yml  scan.yml
apps/api/: .env.example  main.py  requirements.txt  secrethawk.db
apps/api/core/: config.py  security.py
apps/api/models/: finding.py  repository.py  scan.py
apps/api/routers/: dashboard.py  findings.py  health.py  repositories.py  scans.py  webhooks.py
apps/api/rules/: allowlist.yaml  patterns.yaml
apps/api/services/: discord_notifier.py  git_provider.py  redact.py  repository_scanner.py  runner.py  scheduler.py
apps/api/storage/: db.py  repositories.py
apps/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css  main.tsx  types.ts
apps/web/src/assets/: README.md
apps/web/src/components/: FindingsTable.tsx  Navbar.tsx  RecentScansTable.tsx  SeverityBadge.tsx  StatCard.tsx
apps/web/src/hooks/: README.md
apps/web/src/lib/: api.ts  auth.ts
apps/web/src/pages/: Dashboard.tsx  Findings.tsx  Login.tsx  Repositories.tsx  ScanUpload.tsx
apps/web/src/styles/: README.md
apps/web/src/utils/: README.md
cli/: secrethawk.py
docker/: api.Dockerfile  docker-compose.yml  nginx.conf  web.Dockerfile
scanners/: gitleaks.toml  run_gitleaks.py  run_regex.py
